# oamc

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
config/: config.yaml  schema.md
docs/: architecture.md  index.md
raw/sources/: 20260412-designing-delightful-frontends-with-gpt-5-4.md
src/llm_wiki/: cli.py  config.py  dashboard.py  env.py  health.py  markdown.py  menubar.py  models.py  obsidian.py  paths.py  prompts.py  studio.py  telemetry.py
src/llm_wiki/core/: __init__.py  config.py  env.py  health.py  markdown.py  models.py  paths.py  prompts.py  telemetry.py
src/llm_wiki/integrations/: __init__.py  menubar.py  obsidian.py
src/llm_wiki/llm/: base.py  openai_client.py
src/llm_wiki/ops/: capture.py  common.py  ingest.py  lint.py  query.py  rebuild_index.py  search.py
src/llm_wiki/runtime/: __init__.py  dashboard.py  studio.py
tests/: conftest.py  test_cli.py  test_config.py  test_dashboard.py  test_markdown.py  test_menubar.py  test_obsidian.py  test_rebuild_index.py  test_search.py  test_workflows.py
tests/fixtures/: sample_article.md
tests/fixtures/golden/: ingest_source_page.md  query_synthesis_page.md
wiki/: index.md  log.md
wiki/concepts/: design-system.md  frontend-design.md  image-understanding.md  mood-board.md  narrative-structure.md  prompt-engineering.md  skill-packages.md
wiki/entities/: frontend-skill.md  gpt-5-4.md  openai.md  playwright.md
wiki/sources/: 20260412-designing-delightful-frontends-with-gpt-5-4.md
wiki/syntheses/: 20260412-gpt-5-4-and-frontend-design.md
