[project]
name = "llm-wiki"
version = "0.1.0"
description = "Local-first LLM wiki for Obsidian-backed knowledge compilation."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "markdown-it-py>=4.0.0",
  "openai>=1.54.0",
  "pydantic>=2.10.0",
  "PyYAML>=6.0.2",
  "rumps>=0.4.0",
  "python-frontmatter>=1.1.0",
  "typer>=0.15.1",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
]

[project.scripts]
llm-wiki = "llm_wiki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
