[project]
name = "llm-wiki"
version = "0.4.0"
description = "Local-first LLM wiki for Obsidian-backed knowledge compilation."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "markdown-it-py>=4.0.0",
  "openai>=1.54.0",
  "pyinstaller>=6.16.0",
  "pydantic>=2.10.0",
  "PyYAML>=6.0.2",
  "rumps>=0.4.0",
  "python-frontmatter>=1.1.0",
  "typer>=0.15.1",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "pytest>=8.3.4",
  "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
llm-wiki = "llm_wiki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
