[project]
name = "llm-wiki"
version = "0.5.1"
description = "Local-first LLM wiki for Obsidian-backed knowledge compilation."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { file = "LICENSE" }
authors = [
  { name = "Michel Osswald" },
]
keywords = ["llm", "knowledge-base", "obsidian", "wiki", "research", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "fastapi>=0.115.0",
  "markdown-it-py>=4.0.0",
  "openai>=1.54.0",
  "pyinstaller>=6.16.0",
  "pydantic>=2.10.0",
  "PyYAML>=6.0.2",
  "rumps>=0.4.0; sys_platform == 'darwin'",
  "python-frontmatter>=1.1.0",
  "typer>=0.15.1",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "pytest>=8.3.4",
  "ruff>=0.13.0",
  "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
llm-wiki = "llm_wiki.cli:main"

[project.urls]
Homepage = "https://github.com/michiosw/oamc"
Repository = "https://github.com/michiosw/oamc"
Issues = "https://github.com/michiosw/oamc/issues"
Changelog = "https://github.com/michiosw/oamc/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/llm_wiki/cli.py" = ["B008"]
